# cvhack_20171210

./: .gitignore  CMakeLists.txt
birds_view/: CMakeLists.txt  birds_view.cpp
hope/: CMakeLists.txt  main.cpp  settings.cpp  settings.hpp  video_player.cpp  video_player.hpp
simple_test/: CMakeLists.txt  test.cpp
vehicle_detection/: CMakeLists.txt  vehicle_detection.cpp
video_player/: CMakeLists.txt  video_player.cpp
